--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "cross-spawn": "^7.0.3",
+    "npm": "^6.14.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^2.1.8",
+    "star": "^0.5.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
